[gd_scene load_steps=6 format=1]

[ext_resource path="res://src/autoloads/map.gd" type="Script" id=1]
[ext_resource path="res://resources/images/tile_hover.png" type="Texture" id=2]
[ext_resource path="res://resources/images/tile_select.png" type="Texture" id=3]
[ext_resource path="res://resources/scenes/map_gui.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 400, 300 )

[node name="Node2D Map" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"2D" }

[node name="Area2D" type="Area2D" parent="."]

transform/pos = Vector2( 400, 300 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="TileHover" type="Sprite" parent="."]

visibility/visible = false
z/z = 2
texture = ExtResource( 2 )

[node name="TileSelect" type="Sprite" parent="."]

visibility/visible = false
z/z = 1
texture = ExtResource( 3 )

[node name="Node2D MapUI" parent="." instance=ExtResource( 4 )]

[connection signal="mouse_enter" from="Area2D" to="." method="_on_StaticBody2D_mouse_enter"]

[connection signal="input_event" from="Area2D" to="." method="_on_StaticBody2D_input_event"]

[connection signal="mouse_exit" from="Area2D" to="." method="_on_StaticBody2D_mouse_exit"]


